# plantilla-ingenieria-contexto

./: .gitignore  CHANGELOG.md  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  Dockerfile  EXECUTIVE_SUMMARY.md  GITHUB_ACTIONS_PIPELINE.md  GITHUB_ACTIONS_SETUP_COMPLETE.md  GITHUB_MODELS_MIGRATION.md  IMPLEMENTATION_SUMMARY.md  JULES_PR_QUICKSTART.md  MANUAL_TESTING_GUIDE.md  PLANNING.md  PLANNING_PHASE4_8.md  PROJECT_STATUS_REPORT.md  QUICKSTART_TWO_REPOS.md  QUICKSTART_WEBHOOK_BLOG.md  QUICK_FIXES.md  README.md  README_PR_AUTOMATION.md  ROADMAP.md  RULES.md  SESSION_SUMMARY.md  SPRINT1_COMPLETE.md  SPRINT2_COMPLETE.md  SPRINT2_EXECUTIVE_SUMMARY.md  TASK.md  TAXONOMY_SYSTEM.md  prompt.txt  requirements.txt  test_blog_generator.py
.github/: COPILOT_RULES.md
api/: api_payments.py  multilingual_api.py  webhook_server.py  worker.py
blog/: index.md  search.html  search.json  tags.html
docs/: AUTOMATION_GUIDE.md  BLOG_CONFIGURATION.md  BLOG_PIPELINE_STATUS.md  CHANGELOG_20251127.md  COPILOT_INTEGRATION.md  FINAL_REPORT_20251128.md  GROK_INTEGRATION.md  HIDDEN_GEMS_IMPLEMENTATION.md  HIDDEN_GEMS_STRATEGY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_20251128.md  IMPROVEMENT_FEEDBACK_20250726.md  INTEGRATION_SUMMARY.md  INVESTIGATION_SUMMARY.md  JULES_PR_AUTOMATION.md  MULTILINGUAL_README.md  OPENCUT_ANALYSIS.md  OPENCUT_INTEGRATION.md  QUEUE_SYSTEM_GUIDE.md  RUST_IMPLEMENTATION_COMPLETE.md  RUST_MIGRATION_GUIDE.md  TASK.md  VERIFICATION_CHECKLIST.md  (+3 more)
rust-scanner/: Cargo.toml
rust-scanner/src/: ai_reviewer.rs  analyzer.rs  complete_analyzer.rs  hidden_gems.rs  main.rs
(+213 files in other folders)
