[package]
name = "github-scanner-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "github-scanner-rust"
path = "src/main.rs"

[[bin]]
name = "hidden-gems-scanner"
path = "src/hidden_gems.rs"

[[bin]]
name = "complete-analyzer"
path = "src/complete_analyzer.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
rayon = "1.8"  # Paralelismo para análisis
futures = "0.3"  # Async utilities
base64 = "0.21"  # Para decodificar README de GitHub

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
